--- a/mastermind/src/main/resources/templates/game_page.html
+++ b/mastermind/src/main/resources/templates/game_page.html
@@ -1,10 +1,11 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Create Game</h1>
+    <h1>Game Page</h1>
 </body>
 </html>
