--- a/mastermind/src/main/resources/templates/index.html
+++ b/mastermind/src/main/resources/templates/index.html
@@ -1,4 +1,5 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -6,6 +7,6 @@
 </head>
 <body>
     <h1>Home</h1>
-    <h1 th: "'Hello '+ ${name}" ></h1>
+    <h1 th:text = "${name}"></h1>
 </body>
 </html>
